--- a/less/variables.less
+++ b/less/variables.less
@@ -730,11 +730,11 @@
 //##
 
 //** Padding around the thumbnail image
-@thumbnail-padding:           4px;
+@thumbnail-padding:           0px;
 //** Thumbnail background color
 @thumbnail-bg:                @body-bg;
 //** Thumbnail border color
-@thumbnail-border:            #ddd;
+@thumbnail-border:            transparent;
 //** Thumbnail border radius
 @thumbnail-border-radius:     @border-radius-base;
 
