contain videos in viewport

--- a/less/styles.less
+++ b/less/styles.less
@@ -237,12 +237,17 @@ body.front {
     .col-offset-top-2 {
       margin-top: 12.5%; // correspond to half height of 4/3 column. (trust me)
     }
-    .col-offset-top-1 {
+    .col-offset-top-3 {
       margin-top: 18.75%; // correspond to 3/4 height of 4/3 column. (trust me)
     }
     .col-offset-top-4 {
       margin-top: 25%; // correspond to plain height of 4/3 column. (trust me)
     }
+    .col-offset-top-5 { margin-top: 31.25%; }
+    .col-offset-top-6 { margin-top: 37.5%;  }
+    .col-offset-top-7 { margin-top: 43.75%; }
+    .col-offset-top-8 { margin-top: 50%;    }
+    .col-offset-top-9 { margin-top: 56.25%; }
   }
 }
 
