--- a/less/styles.less
+++ b/less/styles.less
@@ -29,6 +29,22 @@ header#header {
         }
       }
     }
+
+    #main-menu {
+      > li > a {
+        padding: 3px 14px;
+      }
+      > li:nth-last-child(-n+2) {
+        .small;
+        a {
+          opacity: .8;
+        }
+      }
+      > li:nth-last-child(2) {
+        margin-top: 6px; padding-top: 6px;
+        border-top: 1px solid lighten(@brand-primary, 10%);
+      }
+    }
   }
 }
 
