--- a/less/styles.less
+++ b/less/styles.less
@@ -444,7 +444,7 @@ body.front main#main {
         figure, .jumbotron {
           iframe, img, p {
             opacity: 1;
-            .transition(opacity 5s linear);
+            .transition(opacity 2s 5s linear);
           }
         }
       }
