--- a/less/styles.less
+++ b/less/styles.less
@@ -34,13 +34,13 @@ header#header {
       > li > a {
         padding: 3px 14px;
       }
-      > li:nth-last-child(-n+2) {
+      > li:nth-last-child(n+4) {
         .small;
         a {
           opacity: .8;
         }
       }
-      > li:nth-last-child(2) {
+      > li:nth-last-child(4) {
         margin-top: 6px; padding-top: 6px;
         border-top: 1px solid lighten(@brand-primary, 10%);
       }
