--- a/less/styles.less
+++ b/less/styles.less
@@ -35,10 +35,7 @@ header#header {
         padding: 3px 14px;
       }
       > li:nth-child(n+4) {
-        .small;
-        a {
-          opacity: .8;
-        }
+        a { .small; color:#cce; }
       }
       > li:nth-child(4) {
         margin-top: 6px; padding-top: 6px;
