fix color + test width + fix top margin random

--- a/less/styles.less
+++ b/less/styles.less
@@ -512,7 +512,7 @@ body.front.program-mode main#main {
   position: absolute; top: 0; right: 0;
   width: @size; height: @size;
   visibility: visible; overflow: hidden;
-  background: transparent url("../img/cross-2.gif") center no-repeat;
+  background: transparent url("../img/cross-2.png") center no-repeat;
   cursor: pointer;
 }
 
