--- a/less/variables.less
+++ b/less/variables.less
@@ -18,7 +18,7 @@
 @brand-success:         #17B61F;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #790a09;
+@brand-danger:          #bb000d;//#790a09;
 
 //== Scaffolding
 //
