--- a/less/styles.less
+++ b/less/styles.less
@@ -72,6 +72,10 @@ main#main {
 
 html, body, body > .container { height: 100%; position: relative; }
 
+body {
+  .translate3d(0,0,0);
+}
+
 header#header {
 
   margin-bottom: @grid-gutter-width;
