Remove image grey entrie

--- a/less/styles.less
+++ b/less/styles.less
@@ -365,7 +365,7 @@ body.front.program-mode main#main {
       }
       aside {
         figure {
-          background-color: @gray-light;
+          background-color: transparent;//@gray-light;
           opacity: 0;
           .transition(~'background-color 5s 10s, opacity 30s 15.3s' @custom);
           img {
